# LLM-Multibagger-OS

./: .env.example  .gitignore  100_Baggers_Observations.md  GUIDE.md  README.md  config.yaml  pyproject.toml  requirements.txt  run.py  sample_watchlist.csv
screener/: interview.py  loader.py  main.py  scraper.py  screen.py  search.py  v3screen.py  wiki.py
